--- a/Satem Web/WebPage/CSS/SATEM.css
+++ b/Satem Web/WebPage/CSS/SATEM.css
@@ -3,5 +3,8 @@ body{
 }
 
 .loginForm{
-	background-color: white; 
+	background-color: white;
+	font-size: 16px;
+	width: 40%;
+ 	margin: 0 auto;
 }
