--- a/SATEMapp/app/src/main/res/values/styles.xml
+++ b/SATEMapp/app/src/main/res/values/styles.xml
@@ -1,8 +1,15 @@
 <resources>
 
-    <!-- Base application theme. -->
+    <!-- Tema Diurno. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <!-- Tema Nocturno. -->
+    <style name="AppTheme.Dark" parent="Theme.AppCompat">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
