--- a/Satem Web/WebPage/CSS/SATEM.css
+++ b/Satem Web/WebPage/CSS/SATEM.css
@@ -8,3 +8,12 @@ body{
 	width: 40%;
  	margin: 0 auto;
 }
+
+footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 0.01%;
+    width: 97.9%;
+    overflow:hidden;
+}
