--- a/SATEMapp/app/src/main/res/values/colors.xml
+++ b/SATEMapp/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#00bcd4</color>
     <color name="colorPrimaryDark">#0097a7</color>
-    <color name="colorAccent">#FF9800</color>
+    <color name="colorAccent">#ff9800</color>
 </resources>
