--- a/SATEMapp/app/src/main/res/layout/activity_login.xml
+++ b/SATEMapp/app/src/main/res/layout/activity_login.xml
@@ -61,7 +61,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="19dp"
+        android:onClick="onClick"
         android:text="@string/login" />
 
     <Button
