--- a/SATEMapp/app/src/main/res/layout/fragment_profile.xml
+++ b/SATEMapp/app/src/main/res/layout/fragment_profile.xml
@@ -24,13 +24,12 @@
         android:layout_below="@+id/section_label" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewEmailLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:layout_alignBottom="@+id/imageView"
+        android:layout_marginStart="14dp"
         android:layout_toEndOf="@+id/imageView"
-        android:layout_marginStart="27dp"
-        android:layout_marginBottom="10dp" />
+        android:text="Textview" />
 
 </RelativeLayout>
