--- a/SATEMapp/app/src/main/res/values/styles.xml
+++ b/SATEMapp/app/src/main/res/values/styles.xml
@@ -24,4 +24,12 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.NoActionBarDark" parent="Theme.AppCompat.NoActionBar" >
+        <item name="colorPrimary">@color/colorPrimaryNABDark</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkNABDark</item>
+        <item name="colorAccent">@color/colorAccentNABDark</item>
+        <item name="android:textColorSecondary">@color/common_google_signin_btn_text_dark_pressed
+        </item>
+    </style>
+
 </resources>
