--- a/SATEMapp/app/src/main/res/layout/fragment_historial.xml
+++ b/SATEMapp/app/src/main/res/layout/fragment_historial.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:visibility="visible"
     tools:context="com.example.r_2g_.satemapp.MainActivity$PlaceholderFragment">
 
     <TextView
@@ -19,5 +20,6 @@
         android:text="@string/NTU"
         android:textAlignment="center"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="invisible" />
 </RelativeLayout>
