--- a/SATEMapp/app/src/main/res/layout/fragment_main.xml
+++ b/SATEMapp/app/src/main/res/layout/fragment_main.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:fillViewport="false"
+    android:visibility="visible">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+
+        <TextView
+            android:id="@+id/textViewEmergencia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/emergenciaActual"
+            android:textSize="18sp" />
+
+        <Spinner
+            android:id="@+id/spinnerEmergencias"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:spinnerMode="dialog" />
 
         <EditText
             android:id="@+id/editTextNombrePaciente"
@@ -41,6 +56,14 @@
             android:layout_marginBottom="8dp"
             android:entries="@array/sexoOpts"
             android:spinnerMode="dialog" />
+
+        <EditText
+            android:id="@+id/editTextSuceso"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/suceso"
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/editTextLugar"
@@ -105,12 +128,12 @@
             android:layout_height="wrap_content"
             android:text="@string/enviar" />
 
-        <EditText
-            android:id="@+id/editText2"
+        <TextView
+            android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName" />
+            android:text="TextView"
+            android:visibility="invisible" />
 
     </LinearLayout>
 </ScrollView>
