--- a/SATEMapp/app/src/main/res/layout/fragment_main.xml
+++ b/SATEMapp/app/src/main/res/layout/fragment_main.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/form"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="false"
+    android:scrollbarStyle="insideOverlay"
     android:visibility="visible">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
 
@@ -18,11 +22,12 @@
             android:text="@string/emergenciaActual"
             android:textSize="18sp" />
 
-        <Spinner
-            android:id="@+id/spinnerEmergencias"
+        <TextView
+            android:id="@+id/textViewResumenEmergencia"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:spinnerMode="dialog" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/editTextNombrePaciente"
