--- a/SATEMapp/app/src/main/res/layout/activity_update.xml
+++ b/SATEMapp/app/src/main/res/layout/activity_update.xml
@@ -120,6 +120,7 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onClick"
             android:text="@string/enviar" />
 
         <TextView
