--- a/Satem Web/WebPage/CSS/placeholder.css
+++ b/Satem Web/WebPage/CSS/placeholder.css
@@ -15,3 +15,11 @@
 ::-ms-input-placeholder { /* Microsoft Edge */
    color:    white;
 }
+
+/* label underline focus color */
+   .input-field input[type=text]:focus {
+     border-bottom: 1px solid #ff9800;
+     box-shadow: 0 1px 0 0 #ff9800;
+}
+
+.tabs .indicator { background-color: #ff9800 !important; }
