SATEM APP - UPDATE DIAGNOSIS OFFLINE BUG FIXED

--- a/Satem Web/WebPage/CSS/placeholder.css
+++ b/Satem Web/WebPage/CSS/placeholder.css
@@ -22,4 +22,6 @@
      box-shadow: 0 1px 0 0 #ff9800;
 }
 
-.tabs .indicator { background-color: #ff9800 !important; }
+.tabs .indicator { 
+	background-color: #ff9800 !important; 
+}
