--- a/SATEMapp/app/src/main/res/layout/fragment_historial_pacientes.xml
+++ b/SATEMapp/app/src/main/res/layout/fragment_historial_pacientes.xml
@@ -3,10 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:visibility="visible"
     tools:context="com.example.r_2g_.satemapp.MainActivity$PlaceholderFragment">
 
@@ -30,7 +26,5 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:divider="@color/common_google_signin_btn_text_dark_focused"
-        android:dividerHeight="3dp"
-        android:footerDividersEnabled="false"
-        android:headerDividersEnabled="false" />
+        android:dividerHeight="2dp" />
 </RelativeLayout>
