cambios del test del semestral con el campo presion arterial

--- a/SATEMapp/app/src/main/res/layout/fragment_main.xml
+++ b/SATEMapp/app/src/main/res/layout/fragment_main.xml
@@ -88,6 +88,15 @@
             android:inputType="textMultiLine" />
 
         <EditText
+            android:id="@+id/editTextPresion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:ems="10"
+            android:hint="Presion Arterial"
+            android:inputType="textPersonName" />
+
+        <EditText
             android:id="@+id/editTextDiagnostico"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
